--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -37,10 +37,77 @@ flex: 3;
     border: none;
     width: 90%;
     border-radius: 25px;
+
+    &:focus{
+        outline: none;
+    }
 }
 .navMiddle{
     flex: 5;
 }
 .navRight{
     flex: 4;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    color: white;
+}
+.navbarIcons{
+    display: flex;
+    font-size: 20px;
+    gap: 10px;
+}
+.navbarlink{
+    margin-left: 20px;
+    font-size: 10px;
+    cursor: pointer;
+}
+
+@media only screen and (max-width:992px) {
+    .navbarContainer{
+        .navleft{
+            flex: 2;
+            .logo{
+                font-weight: 500;
+            }
+        }
+        .navMiddle{
+            flex: 5;
+            .searchbar{
+                width: 95%;
+
+                .searchInput{
+                    width: 70%;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width:768px) {
+    .navbarContainer{
+        .navleft{
+            flex: 3;
+        }
+        .navRight{
+            // .navbarlink{
+            //     display: none;
+            // }
+        }
+    }
+}
+@media only screen and (max-width:576px) {
+    .navbarContainer{
+        justify-content: space-between;
+        .navleft{
+            flex: 1;
+        }
+        .navMiddle{
+            flex: 1;
+            display: none;
+        }
+        .navRight{
+            flex: 1;
+        }
+    }
 }
