--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,7 +1,7 @@
 .navbarContainer{
     width: 100%;
     height: 80px;
-    background-color: #1877f2;
+    background-color: #3b5998;
     display: flex;
     align-items: center;
     position: sticky;
