--- a/src/components/Sharenews/ShareNews.scss
+++ b/src/components/Sharenews/ShareNews.scss
@@ -1,9 +1,9 @@
 .share{
     width: 100%;
     height: 170%;
-    border-radius: 10px;
-    -webkit-box-shadow: 2px 5px 12px 1px rgb(30, 30, 30);
-    box-shadow: 2px 5px 12px 1px rgb(30, 30, 30);
+    border-radius: 5px;
+    -webkit-box-shadow: 2px 5px 12px 1px rgb(241, 236, 236);
+    box-shadow: 2px 5px 12px 1px rgb(211, 209, 209);
 
     .shareWrapper{
         padding: 20px;
@@ -26,6 +26,41 @@
             border: none;
             background-color: transparent;
             font-size: 18px;
+        }
+        
+    }
+    .sharehr{
+        margin: 20px;
+    }
+    .shareBottom{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .shareOptions{
+            display: flex;
+            align-items: center;
+            margin-left: 20px;
+            justify-content: space-around;
+            width: 90%;
+
+            .shareOption{
+                display: flex;
+                margin-right: 20px;
+                align-items: center;
+                cursor: pointer;
+
+                .shareIcon{
+                    font-size: 30px;
+                    margin-right: 10px;
+                }
+                .shareOptionsText{
+                    font-size: 14px;
+                    font-weight: 600;
+                    color: gray;
+                }
+            }
+
         }
     }
 }
