--- a/src/components/RightSidebar/RightSidebar.scss
+++ b/src/components/RightSidebar/RightSidebar.scss
@@ -1,4 +1,20 @@
 .rightside{
     flex: 3.5;
+    padding-left: 25px;
     
+
+    .righrbarWraper{
+        padding: 20px 20px 0 0;
+        display: flex;
+        flex-direction: column;
+    }
+    .request{
+        display: flex;
+        justify-content: space-between;
+        font-size: medium;
+        font-weight: bold;
+        margin: 10px;
+       
+    }
+   
 }
