--- a/src/components/RightSideHome/RightSidebarHome.scss
+++ b/src/components/RightSideHome/RightSidebarHome.scss
@@ -19,6 +19,14 @@
 
    
    }
+  .rightbarTitle{
+    display: flex;
+    margin-bottom: 20px;
+    color: gray;
+  }
+  .footerHr{
+    margin-top: 10px 0;
+  }
   
    
 }
